tests/decayed-namespace.lushui
;; TEST fail check

data Alpha: Type =
    alpha: Alpha

use Alpha as A

x: Alpha = A.alpha

A_: Type = Alpha

y: Alpha = A_.alpha
